# beamDataAIProject

./: README.md  post.md  post_edited.md  post_fact_checked.md  pyproject-old.toml  pyproject.toml  research.json
src/linkedin_creative/: crew.py  main.py
src/linkedin_creative/config/: agents.yaml  tasks.yaml
