[project]
name = "linkedin_creative"
version = "0.1.0"
description = "linkedin-creative using crewAI"
authors = [
    { name = "Your Name", email = "you@example.com" },
]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.67.1,<1.0.0",
]

[project.scripts]
linkedin_creative = "linkedin_creative.main:run"
run_crew = "linkedin_creative.main:run"
train = "linkedin_creative.main:train"
replay = "linkedin_creative.main:replay"
test = "linkedin_creative.main:test"

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"
